# lumifox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
.github/: legal_ascii.cast  legal_unicode.cast
.github/workflows/: bare-metal-build.yml  ci.yml
.trunk/: trunk.yaml
engine/: Cargo.toml
engine/src/: main.rs
modules/chess/: Cargo.toml  README.md
modules/chess/benches/: apply_random_move_clone_midgame.rs  bitboard_iter.rs  fen_parse.rs  generate_midgame.rs  generate_startpos.rs  get_piece_scan_midgame.rs  is_square_attacked_scan_midgame.rs  legal_check_midgame.rs  legal_check_startpos.rs  move_generation.rs  random_move_check_midgame.rs  try_all_generated_moves_apply_midgame.rs
modules/chess/examples/: attacked.rs  legal_play.rs  print.rs  small_ai.rs
modules/chess/src/: constants.rs  errors.rs  lib.rs
modules/chess/src/legal/: attack.rs  batch.rs  checker.rs  mod.rs
modules/chess/src/model/: action.rs  bitboard.rs  board.rs  gameboard.rs  gamedata.rs  mod.rs  piecemove.rs  pieces.rs  rays.rs
modules/chess/src/movegen/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
modules/chess/src/utils/: bitboard.rs  mod.rs
modules/proc/: Cargo.toml  README.md  build.rs
modules/proc/examples/: case_insensitive_test.rs  fen_macro_error_test.rs  fen_macro_test.rs  macro_test.rs  moves_parsing_test.rs  new_macros_test.rs  opening_macro_test.rs  san_moves_demo.rs  simple_usage.rs
modules/proc/src/: lib.rs
modules/proc/src/macros/: fen.rs  literals.rs  mod.rs  openings.rs  positions.rs
modules/proc/tests/: integration_test.rs
modules/uci/: Cargo.toml  LICENCE-BSD-3-Clause.md  TODO.md
modules/uci/src/: engine_to_gui.rs  error.rs  gui_to_engine.rs  lib.rs
