# lumifox_chess_proc/Cargo.toml
[package]
name = "lumifox_chess_proc"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
proc-macro = true # This line is crucial for defining a procedural macro crate

[dependencies]
syn = { version = "2.0", features = [
  "full",
  "extra-traits",
] } # Used for parsing Rust syntax trees
quote = "1.0" # Used for generating Rust code
proc-macro2 = "1.0" # Required by syn and quote
# Dependency on your core chess engine crate to access GameData::from_fen and other types.
lumifox_chess = { path = "../chess" }
