# lumifox_chess_proc/Cargo.toml
[package]
name = "lumifox_chess_proc"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Declarative macros for the Lumifox chess engine: compile-time FEN, square, bitboard and SAN move literals."
readme = "../../README.md"
repository = "https://github.com/ArchProtogens/lumifox"
homepage = "https://github.com/ArchProtogens/lumifox"
documentation = "https://docs.rs/lumifox_chess_proc"
authors = ["Clifton Toaster Reid <clifton@archprotogens.org>"]
keywords = ["chess", "macro", "fen", "bitboard", "uci", "game-engine"]
categories = ["development-tools", "games"]

[dependencies]
# Dependency on your core chess engine crate to access GameData::from_fen and other types.
lumifox_chess = { path = "../chess", version = "0.1.0" }
once_cell = "1.19"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
lumifox_chess = { path = "../chess", version = "0.1.0", features = [
  "std",
] } # For testing the procedural macros with the chess engine types
